Fixing wrong parenthesis.

--- a/javascript/DOM Manipulation.ipynb
+++ b/javascript/DOM Manipulation.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "498badc8",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "</body>\n",
        "\n",
        "<script>\n",
-       "    (() => {\n",
+       "    (() => { // calling as lambda due to how jupyter handles rerunning cells\n",
        "        // You have to look at the actual JS console (not the notebook) to see these\n",
        "        document.addEventListener('click', () => console.log('Document bubble 1'));\n",
        "        document.addEventListener('click', () => console.log('Document bubble 2'));\n",
@@ -183,13 +183,28 @@
        "        window.addEventListener('click', () => console.log('Window bubble'));\n",
        "        \n",
        "        document.querySelector('div').addEventListener('click', () => console.log('Div bubble'));\n",
-       "        document.querySelector('div').addEventListener('click', () => console.log('Div capture', true));\n",
+       "        document.querySelector('div').addEventListener('click', () => console.log('Div capture'), true);\n",
        "        \n",
        "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 1'));\n",
-       "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 1', true));\n",
+       "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 1'), true);\n",
        "        \n",
        "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 2'));\n",
-       "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 2', true));\n",
+       "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 2'), true);\n",
+       "        \n",
+       "        // Expected Output:\n",
+       "        /*\n",
+       "            Document capture 1\n",
+       "            Document capture 2\n",
+       "            Div capture\n",
+       "            Button capture 1\n",
+       "            Button capture 2\n",
+       "            Button bubble 1\n",
+       "            Button bubble 2\n",
+       "            Div bubble\n",
+       "            Document bubble 1\n",
+       "            Document bubble 2\n",
+       "            Window bubble\n",
+       "        */\n",
        "    })();\n",
        "</script>\n"
       ],
@@ -222,13 +237,13 @@
     "        window.addEventListener('click', () => console.log('Window bubble'));\n",
     "        \n",
     "        document.querySelector('div').addEventListener('click', () => console.log('Div bubble'));\n",
-    "        document.querySelector('div').addEventListener('click', () => console.log('Div capture', true));\n",
+    "        document.querySelector('div').addEventListener('click', () => console.log('Div capture'), true);\n",
     "        \n",
     "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 1'));\n",
-    "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 1', true));\n",
+    "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 1'), true);\n",
     "        \n",
     "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 2'));\n",
-    "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 2', true));\n",
+    "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 2'), true);\n",
     "        \n",
     "        // Expected Output:\n",
     "        /*\n",
