Adding clarification about custom events.

--- a/javascript/DOM Manipulation.ipynb
+++ b/javascript/DOM Manipulation.ipynb
@@ -137,6 +137,7 @@
     "\n",
     "__NOTE:__ Unfortunately, there's an issue with the Jupyter JS implementation that prevents the div and button events from firing, but I tested it in a normal web page.\n",
     "\n",
+    "### Phases\n",
     "In general, the flow of events is as follows:\n",
     "- __Capture Phase__ (\"event capturing\")\n",
     "  - Events propagate from `window` down to `document` and down the DOM tree until the lowest level target\n",
@@ -147,12 +148,18 @@
     "  \n",
     "As shown below, events are added to the __bubble phase by default__, but there's an optional 3rd boolean parameter to specify __capture phase__ instead.\n",
     "\n",
+    "### Controlling Propagation\n",
     "These methods of the `Event` object allow you to control the propagation when needed:\n",
     "- `stopPropagation`\n",
     "  - the event will fire on the remaining handlers on the current target in the current phase and then stop\n",
     "  - eg. in capture phase, you can install a global handler to stop children from seeing clicks directly\n",
     "- `stopImmediatePropagation`\n",
-    "  - like `stopPropagation` but also stops other handlers on the same level (after this one) from getting called"
+    "  - like `stopPropagation` but also stops other handlers on the same level (after this one) from getting called\n",
+    "  \n",
+    "### Custom Events\n",
+    "When you use `dispatchEvent()` on a target element, the capture handlers are called from the top down to that target, and then all handlers are called on that target for that event.  Whether or not the event then bubbles back up is determined by the `bubbles` property on the `Event`, which defaults to `false`.  For example, `dispatchEvent(new Event('click', {bubbles: true}))` will cause it to bubble up like a normal click does.\n",
+    "\n",
+    "NOTE: if you call `click()` instead, it captures and bubbles as a normal click would."
    ]
   },
   {
