--- a/javascript/DOM Manipulation.ipynb
+++ b/javascript/DOM Manipulation.ipynb
@@ -163,6 +163,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14596293",
+   "metadata": {},
+   "source": [
+    "### Simple Example of Phases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "498badc8",
