Adding notes about # and _ in JS.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -5690,9 +5690,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23b0e483",
+   "metadata": {},
+   "source": [
+    "# JS vs. TS Private Members\n",
+    "\n",
+    "NOTE: This cell doesn't run due to the ES version being too old to use `#` syntax.\n",
+    "\n",
+    "`private`, `public`, and `protected` access modifiers are a TS feature.\n",
+    "\n",
+    "More recently, JavaScript itself added the `#` syntax to mark a member as __private__.\n",
+    "\n",
+    "You can also put `_` in front of an identifier to mark it as protected __by convention__ (not enforced)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cbb22ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 4, Character 9\n        #y = 10;\n________^\nTS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 4, Character 9",
+      "        #y = 10;",
+      "________^",
+      "TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        private x = 5;\n",
+    "        #y = 10;\n",
+    "        \n",
+    "        f() {\n",
+    "            console.log(this.x);\n",
+    "            console.log(this.#y);\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    const m = new MyClass();\n",
+    "    m.f();\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b23bbe76",
+   "id": "111748aa",
    "metadata": {},
    "outputs": [],
    "source": []
