Adding subquery and derived table notes.

--- a/SQL/Advanced Queries.ipynb
+++ b/SQL/Advanced Queries.ipynb
@@ -5,15 +5,7 @@
    "execution_count": 1,
    "id": "15e15f07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mThere's a new jupysql version available (0.10.1), you're running 0.10.0. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "%sql duckdb://"
@@ -672,7 +664,9 @@
     "4. Example 4 showcases a derived table. It calculates the average salary using a subquery and joins it with the employees table to display the average salary for each employee.\n",
     "\n",
     "Subqueries and derived tables are powerful tools in SQL that allow us to perform complex queries and calculations. They can be used in various scenarios to filter, aggregate, or join data. Understanding and utilizing these features can greatly enhance the capabilities of SQL queries.\n",
-    "```"
+    "```\n",
+    "\n",
+    "NOTE: subqueries that don't reference columns from the outer query will only run once at the beginning of the statement, but if you reference something from the outer query, it becomes a CORRELATED SUBQUERY which runs for every row and is very expensive.  A join is more efficient in those cases."
    ]
   },
   {
@@ -1049,6 +1043,195 @@
     "  SELECT AVG(salary) AS avg_salary\n",
     "  FROM employees\n",
     ") d;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b43d70f6",
+   "metadata": {},
+   "source": [
+    "# More About Derived Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a027803b",
+   "metadata": {},
+   "source": [
+    "## Definition\n",
+    "\n",
+    "A derived table is a __subquery in the `FROM` part__ of the statement.\n",
+    "\n",
+    "In the example below, a __temporary table__ is created to use as the source table for the top query and then thrown away.\n",
+    "\n",
+    "The key thing to note is that the __subquery runs first__ and then the outer query.  The subquery __runs once__, not on each row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3e362193",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "            <th>salary</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>David Lee</td>\n",
+       "            <td>4500.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>John Doe</td>\n",
+       "            <td>5000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Mike Johnson</td>\n",
+       "            <td>5500.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Jane Smith</td>\n",
+       "            <td>6000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Emily Brown</td>\n",
+       "            <td>7000.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+--------------+---------+\n",
+       "|     name     |  salary |\n",
+       "+--------------+---------+\n",
+       "|  David Lee   | 4500.00 |\n",
+       "|   John Doe   | 5000.00 |\n",
+       "| Mike Johnson | 5500.00 |\n",
+       "|  Jane Smith  | 6000.00 |\n",
+       "| Emily Brown  | 7000.00 |\n",
+       "+--------------+---------+"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT name, salary FROM (\n",
+    "    SELECT name, department, salary FROM employees\n",
+    ") ORDER BY salary;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c47ac0b6",
+   "metadata": {},
+   "source": [
+    "## Alias\n",
+    "\n",
+    "The example below shows how to alias the derived table in other parts of the query so it can be used to qualify columns like a real table.\n",
+    "\n",
+    "Note that although in some engines this is optional, some engines may require you to alias all the time or else give an error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "228470f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "            <th>salary</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>David Lee</td>\n",
+       "            <td>4500.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>John Doe</td>\n",
+       "            <td>5000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Mike Johnson</td>\n",
+       "            <td>5500.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Jane Smith</td>\n",
+       "            <td>6000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Emily Brown</td>\n",
+       "            <td>7000.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+--------------+---------+\n",
+       "|     name     |  salary |\n",
+       "+--------------+---------+\n",
+       "|  David Lee   | 4500.00 |\n",
+       "|   John Doe   | 5000.00 |\n",
+       "| Mike Johnson | 5500.00 |\n",
+       "|  Jane Smith  | 6000.00 |\n",
+       "| Emily Brown  | 7000.00 |\n",
+       "+--------------+---------+"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT subquery.name, subquery.salary FROM (\n",
+    "    SELECT name, department, salary FROM employees\n",
+    ") subquery\n",
+    "ORDER BY salary;"
    ]
   },
   {
