Adding some JS notes from my todo list.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -5751,12 +5751,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "111748aa",
+   "cell_type": "markdown",
+   "id": "1794b213",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Shorthand Properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e2671604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ x: 5, y: 'hi', z: 20 }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        x: number;\n",
+    "        y: string;\n",
+    "        z: number;\n",
+    "    }\n",
+    "    \n",
+    "    const x = 5;\n",
+    "    const y = 'hi';\n",
+    "    \n",
+    "    const m = {x, y, z: 20}; // x and y are the names on both side, so no : needed\n",
+    "    console.log(m);\n",
+    "})();"
+   ]
   }
  ],
  "metadata": {
