--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2324,9 +2324,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef5a1ef0",
+   "metadata": {},
+   "source": [
+    "# Static Methods on Number (the boxed type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3ca74491",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 2, Character 24\n    console.log(Number.isInteger(5)); // this doesn't work in Jupyter, but it's real\n_______________________^\nTS2550: Property 'isInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.\n\nLine 3, Character 24\n    console.log(Number.isNaN(NaN));\n_______________________^\nTS2550: Property 'isNaN' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.\n\nLine 4, Character 24\n    console.log(Number.isFinite(Infinity));\n_______________________^\nTS2550: Property 'isFinite' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.\n\nLine 5, Character 24\n    console.log(Number.isSafeInteger(5));\n_______________________^\nTS2550: Property 'isSafeInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 2, Character 24",
+      "    console.log(Number.isInteger(5)); // this doesn't work in Jupyter, but it's real",
+      "_______________________^",
+      "TS2550: Property 'isInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+      "",
+      "Line 3, Character 24",
+      "    console.log(Number.isNaN(NaN));",
+      "_______________________^",
+      "TS2550: Property 'isNaN' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+      "",
+      "Line 4, Character 24",
+      "    console.log(Number.isFinite(Infinity));",
+      "_______________________^",
+      "TS2550: Property 'isFinite' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+      "",
+      "Line 5, Character 24",
+      "    console.log(Number.isSafeInteger(5));",
+      "_______________________^",
+      "TS2550: Property 'isSafeInteger' does not exist on type 'NumberConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    console.log(Number.isInteger(5)); // this doesn't work in Jupyter, but it's real\n",
+    "    console.log(Number.isNaN(NaN));\n",
+    "    console.log(Number.isFinite(Infinity));\n",
+    "    console.log(Number.isSafeInteger(5));\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f07b5a5",
+   "id": "a74e627e",
    "metadata": {},
    "outputs": [],
    "source": []
