--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "0e4be692",
    "metadata": {},
    "outputs": [
@@ -767,12 +767,19 @@
     "console.log(a);\n",
     "console.log(b);\n",
     "console.log(x);\n",
-    "console.log(y);"
+    "console.log(y);\n",
+    "console.log();\n",
+    "\n",
+    "function f({a, b}: {a: number, b: number}) {\n",
+    "    console.log(a);\n",
+    "    console.log(b);\n",
+    "}\n",
+    "f({a: 5, b: 10});"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "32e399c4",
    "metadata": {},
    "outputs": [
@@ -784,7 +791,10 @@
       "\u001b[33m1\u001b[39m\r\n",
       "\u001b[33m2\u001b[39m\r\n",
       "\u001b[33m1\u001b[39m\r\n",
-      "\u001b[33m2\u001b[39m\r\n"
+      "\u001b[33m2\u001b[39m\r\n",
+      "\r\n",
+      "\u001b[33m5\u001b[39m\r\n",
+      "\u001b[33m10\u001b[39m\r\n"
      ]
     }
    ],
@@ -1644,9 +1654,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54604599",
+   "metadata": {},
+   "source": [
+    "# groupBy\n",
+    "\n",
+    "This is very new (I think I need to upgrade my local node since it doesn't see it - but my chrome devtools sees it.\n",
+    "\n",
+    "You can group an iterable by groups of arrays based on a function that says what grouping key to use.\n",
+    "\n",
+    "It is available for both objects and maps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3603e7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/group-by.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/group-by.ts\n",
+    "\n",
+    "const nums = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];\n",
+    "const grouped = Object.groupBy(nums, n => n % 2 ? 'odd' : 'even');\n",
+    "const groupedDict = Map.groupBy(nums, n => n % 2 ? 'odd' : 'even');\n",
+    "\n",
+    "console.log(grouped); // {odd: [1, 3, 5, 7, 9], even: [2, 4, 6, 8, 10]}\n",
+    "console.log()\n",
+    "console.log(groupedDict); // {'odd' => [1, 3, 5, 7, 9], 'even' => [2, 4, 6, 8, 10]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "61937d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/ts-node/src/index.ts:859\r\n",
+      "    return new TSError(diagnosticText, diagnosticCodes, diagnostics);\r\n",
+      "           ^\r\n",
+      "TSError: ⨯ Unable to compile TypeScript:\r\n",
+      "\u001b[96mts-files/group-by.ts\u001b[0m:\u001b[93m3\u001b[0m:\u001b[93m24\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2339: \u001b[0mProperty 'groupBy' does not exist on type 'ObjectConstructor'.\r\n",
+      "\r\n",
+      "\u001b[7m3\u001b[0m const grouped = Object.groupBy(nums, n => n % 2 ? 'odd' : 'even');\r\n",
+      "\u001b[7m \u001b[0m \u001b[91m                       ~~~~~~~\u001b[0m\r\n",
+      "\u001b[96mts-files/group-by.ts\u001b[0m:\u001b[93m3\u001b[0m:\u001b[93m38\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS7006: \u001b[0mParameter 'n' implicitly has an 'any' type.\r\n",
+      "\r\n",
+      "\u001b[7m3\u001b[0m const grouped = Object.groupBy(nums, n => n % 2 ? 'odd' : 'even');\r\n",
+      "\u001b[7m \u001b[0m \u001b[91m                                     ~\u001b[0m\r\n",
+      "\u001b[96mts-files/group-by.ts\u001b[0m:\u001b[93m4\u001b[0m:\u001b[93m25\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2339: \u001b[0mProperty 'groupBy' does not exist on type 'MapConstructor'.\r\n",
+      "\r\n",
+      "\u001b[7m4\u001b[0m const groupedDict = Map.groupBy(nums, n => n % 2 ? 'odd' : 'even');\r\n",
+      "\u001b[7m \u001b[0m \u001b[91m                        ~~~~~~~\u001b[0m\r\n",
+      "\u001b[96mts-files/group-by.ts\u001b[0m:\u001b[93m4\u001b[0m:\u001b[93m39\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS7006: \u001b[0mParameter 'n' implicitly has an 'any' type.\r\n",
+      "\r\n",
+      "\u001b[7m4\u001b[0m const groupedDict = Map.groupBy(nums, n => n % 2 ? 'odd' : 'even');\r\n",
+      "\u001b[7m \u001b[0m \u001b[91m                                      ~\u001b[0m\r\n",
+      "\r\n",
+      "    at createTSError (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/\u001b[4mts-node\u001b[24m/src/index.ts:859:12)\r\n",
+      "    at reportTSError (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/\u001b[4mts-node\u001b[24m/src/index.ts:863:19)\r\n",
+      "    at getOutput (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/\u001b[4mts-node\u001b[24m/src/index.ts:1077:36)\r\n",
+      "    at Object.compile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/\u001b[4mts-node\u001b[24m/src/index.ts:1433:41)\r\n",
+      "    at Module.m._compile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/\u001b[4mts-node\u001b[24m/src/index.ts:1617:30)\r\n",
+      "\u001b[90m    at Module._extensions..js (node:internal/modules/cjs/loader:1309:10)\u001b[39m\r\n",
+      "    at Object.require.extensions.<computed> [as .ts] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/\u001b[4mts-node\u001b[24m/src/index.ts:1621:12)\r\n",
+      "\u001b[90m    at Module.load (node:internal/modules/cjs/loader:1113:32)\u001b[39m\r\n",
+      "\u001b[90m    at Function.Module._load (node:internal/modules/cjs/loader:960:12)\u001b[39m\r\n",
+      "\u001b[90m    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:83:12)\u001b[39m {\r\n",
+      "  diagnosticCodes: [ \u001b[33m2339\u001b[39m, \u001b[33m7006\u001b[39m, \u001b[33m2339\u001b[39m, \u001b[33m7006\u001b[39m ]\r\n",
+      "}\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/group-by.ts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be2297f",
+   "id": "ebc2d441",
    "metadata": {},
    "outputs": [],
    "source": []
