Adding notes about other members of console.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -11,7 +11,6 @@
     "\n",
     "- built-in primitive types\n",
     "- built-in collections\n",
-    "- console\n",
     "- parseInt, etc.\n",
     "- built-in JS browser objects like 'this', 'document', and 'window' for DOM manipulation\n"
    ]
@@ -24,6 +23,176 @@
     "# How to Access\n",
     "\n",
     "There are **no imports needed** - these should just work in TS code.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e5e3e8",
+   "metadata": {},
+   "source": [
+    "# Console\n",
+    "\n",
+    "Some of these were already discussed in the `Strings` notebook, but this is a more complete list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9b345cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n",
+      "{ a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{ a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n",
+      "{ a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌─────────┬───┬───┬───┬────────┐\n",
+      "│ (index) │ 0 │ 1 │ 2 │ Values │\n",
+      "├─────────┼───┼───┼───┼────────┤\n",
+      "│    a    │ 1 │ 2 │ 3 │        │\n",
+      "│    b    │   │   │   │   4    │\n",
+      "│    c    │   │   │   │  'hi'  │\n",
+      "└─────────┴───┴───┴───┴────────┘\n",
+      "┌─────────┬────────┐\n",
+      "│ (index) │ Values │\n",
+      "├─────────┼────────┤\n",
+      "│    0    │   1    │\n",
+      "│    1    │   2    │\n",
+      "│    2    │   3    │\n",
+      "└─────────┴────────┘\n",
+      "┌─────────┬───────────┐\n",
+      "│ (index) │  Values   │\n",
+      "├─────────┼───────────┤\n",
+      "│    a    │ undefined │\n",
+      "│    b    │     4     │\n",
+      "│    c    │   'hi'    │\n",
+      "└─────────┴───────────┘\n",
+      "{ a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n",
+      "[ 1, 2, 3 ]\n",
+      "The group\n",
+      "  { a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n",
+      "  [ 1, 2, 3 ]\n",
+      "Started the fetch\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "default: 259.846ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const m = {a: [1, 2, 3], b: 4, c: 'hi'};\n",
+    "    \n",
+    "    console.log(m);  // object with clickable fields shown in real browser\n",
+    "    \n",
+    "    // These are functionally the same but styled (and filtered) differently in devtools\n",
+    "    // to help the developer debug\n",
+    "    console.info(m);\n",
+    "    console.warn(m);\n",
+    "    console.error(m);\n",
+    "    \n",
+    "    // Show data in tabular form instead of having to click into fields\n",
+    "    console.table(m);\n",
+    "    console.table(m.a);\n",
+    "    console.table({...m, a: undefined}) // looks simpler without the array subfield\n",
+    "    \n",
+    "    // Similar to console.log() but more of a tree structure (good for DOM)\n",
+    "    // (not that different from console.log though)\n",
+    "    console.dir(m);\n",
+    "    console.dir(m.a);\n",
+    "    \n",
+    "    // Group logging below a common header for convenience\n",
+    "    // (this doesn't seem to work that well in Chrome devtools unless you filter very aggressively)\n",
+    "    console.group('The group');\n",
+    "    console.log(m);\n",
+    "    console.log(m.a);\n",
+    "    console.groupEnd();\n",
+    "    \n",
+    "    // Timing\n",
+    "    console.time();\n",
+    "    console.log('Started the fetch');\n",
+    "    fetch('http://www.amazon.com').then(() => console.timeEnd());\n",
+    "    \n",
+    "    // Breakpoint (not on console but feels related)\n",
+    "    // (you could also just set a breakpoint in devtools visually)\n",
+    "    debugger;  // won't work in jupyter, but in chrome it will break\n",
+    "    \n",
+    "    // others include: console.clear(), console.assert(), etc.\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f461b43b",
+   "metadata": {},
+   "source": [
+    "# alert\n",
+    "\n",
+    "__modal__ message box popup with OK button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b52a1b0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ReferenceError",
+     "evalue": "alert is not defined",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:2",
+      "    alert('Hello'); // doesn't work in jupyter, but in browser it will pop up a message box",
+      "    ^",
+      "",
+      "ReferenceError: alert is not defined",
+      "    at evalmachine.<anonymous>:2:5",
+      "    at evalmachine.<anonymous>:3:3",
+      "    at Script.runInThisContext (node:vm:122:12)",
+      "    at Object.runInThisContext (node:vm:298:38)",
+      "    at run ([eval]:1020:15)",
+      "    at onRunRequest ([eval]:864:18)",
+      "    at onMessage ([eval]:828:13)",
+      "    at process.emit (node:events:511:28)",
+      "    at emit (node:internal/child_process:944:14)",
+      "    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    alert('Hello'); // doesn't work in jupyter, but in browser it will pop up a message box\n",
+    "})();"
    ]
   },
   {
