Adding more info from JS/TS ToDo items.

--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -484,7 +484,9 @@
     "\n",
     "To change x to by reference, you'd move its declaration out of the loop.\n",
     "\n",
-    "To change y to be by value, you could use an **immediately called lambda** such as the ones used in these notebooks on the first and last lines. Then the value passed in would be lexically captured.\n"
+    "To change y to be by value, you could use an **immediately called lambda** such as the ones used in these notebooks on the first and last lines. Then the value passed in would be lexically captured.\n",
+    "\n",
+    "__WARNING:__ if you use `var` instead of `let` in a `for` loop, the closure will be by reference (in a global variable as usual)."
    ]
   },
   {
