--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -367,7 +367,11 @@
     "\n",
     "When you call APIs that make HTTP requests, etc. you will get back promises that are actually asynchronous.\n",
     "\n",
-    "__Chaining__ promises with `.then()` is flexible.  The value returned by each `.then()` can be either a __single value__ or a __promise__.  Then the `.then()` call itself returns a promise.  Thus, you can either keep mapping single values or automatically unwrap other promises based on the value of the previous promise and keep the chain going.  If you wanted to prevent the automatic unwrapping, you'd need to hide it in an array or something."
+    "__Chaining__ promises with `.then()` is flexible.  The value returned by each `.then()` can be either a __single value__ or a __promise__.  Then the `.then()` call itself returns a promise.  Thus, you can either keep mapping single values or automatically unwrap other promises based on the value of the previous promise and keep the chain going.  If you wanted to prevent the automatic unwrapping, you'd need to hide it in an array or something.\n",
+    "\n",
+    "Creating a `new Promise` actually runs the function passed into the constructor __right away inline__ (in the example below we made it do the main logic later by using `setTimeout`), but the `.then()` won't get called until the next event loop.\n",
+    "\n",
+    "Built-in JavaScript operations that do __truly asynchronous__ work (such as `fetch`) start doing work right away when called, but you have to wait until the next event loop opportunity after the promise is resolved to see any result from it."
    ]
   },
   {
@@ -431,7 +435,7 @@
    "id": "8a971b2c",
    "metadata": {},
    "source": [
-    "# Promise.race()\n",
+    "# Promise.race()/Promise.any()\n",
     "\n",
     "This one can't run in Jupyter due to the ES5 issue.\n",
     "\n",
@@ -439,7 +443,9 @@
     "\n",
     "The ones that don't finish first still complete - you would have to use `AbortController` API to change that.\n",
     "\n",
-    "To implement this behavior yourself, you can also make a new `Promise` and pass the `resolve` and `reject` to the subpromises you're waiting on with `.then()`. When one of them resolves or rejects, the whole thing will resolve or reject because you passed the top-level handler."
+    "To implement this behavior yourself, you can also make a new `Promise` and pass the `resolve` and `reject` to the subpromises you're waiting on with `.then()`. When one of them resolves or rejects, the whole thing will resolve or reject because you passed the top-level handler.\n",
+    "\n",
+    "`Promise.any()` is similar, but it differs in terms of __rejections__ (errors). It will only reject if __all__ of the subpromises reject, rather than rejecting if the first one rejects like `Promise.race()` does."
    ]
   },
   {
@@ -475,6 +481,42 @@
     "  const p = Promise.race([fetch('http://www.yahoo.com'), fetch('http://www.google.com')]);\n",
     "  p.then(r => console.log(r));\n",
     "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "952e6a38",
+   "metadata": {},
+   "source": [
+    "# Other Promise methods\n",
+    "\n",
+    "Since I can't run promises in jupyter, I'm just going to give a list here of promise methods to be aware of.\n",
+    "\n",
+    "- `Promise.all()`\n",
+    "  - resolves to array of values resolved by subpromises (once they all resolve)\n",
+    "  - if any one of them rejects, the whole promise rejects\n",
+    "- `Promise.allSettled()`\n",
+    "  - like `Promise.all()` but gives an array of objects describing the results (instead of the direct results)\n",
+    "- `Promise.reject(reason)`\n",
+    "  - creates a promise that rejects right away with the given object as a reason\n",
+    "  - eg. `Promise.reject(new Error('broken'))`\n",
+    "- `Promise.resolve(valOrPromise)`\n",
+    "  - creates a promise that resolves right away with the given value\n",
+    "  - if the given value is a promise, then the promise is returned from this method (without creating anything new)\n",
+    "    - so this can be used to disambiguate between promises and single values too\n",
+    "- `Promise.try(fn)`\n",
+    "  - wraps a function call as a promise so you can use methods like `.then()` and `.catch()` on it\n",
+    "- `Promise.withResolvers()`\n",
+    "  - creates a `Promise` but returns an object containing the promise, resolver, and rejector\n",
+    "  - this is so that objects outside the promise can resolve and reject it\n",
+    "  \n",
+    "In addition, here is more info about teh 3 main instance methods of a `Promise` object:\n",
+    "- `p.then(onFulfilled, onRejected?)`\n",
+    "  - if a promise rejects and you don't have an `onRejected`, the promise will `throw`\n",
+    "- `p.catch(onRejected)`\n",
+    "  - actually the same as doing `p.then(undefined, onRejected)`\n",
+    "- `p.finally(onFinally)`\n",
+    "  - as you'd expect"
    ]
   },
   {
@@ -595,6 +637,147 @@
    ],
    "source": [
     "console.log(setTimeout(() => {}));\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83d9db69",
+   "metadata": {},
+   "source": [
+    "# setTimeout Ordering\n",
+    "\n",
+    "Because JS concurrency is not real concurrency (unless you call an asynchronous browser API like `fetch`, the below code will print in the right order. The reason is because the `setTimeout` calls will be in order, and they will add to the back of the task queue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bbb2ab1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    for (let i = 0; i < 100; i++) {\n",
+    "        setTimeout(() => console.log(i));\n",
+    "    }\n",
+    "})();"
    ]
   },
   {
@@ -994,6 +1177,24 @@
     "```\n",
     "\n",
     "NOTE: this example shows using `className`, but you can also use `classList` as an array and add/remove classes at runtime."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81cfd766",
+   "metadata": {},
+   "source": [
+    "## classList/className\n",
+    "\n",
+    "`element.classList` gives you an object with methods for interacting with the classes on the element.  `element.className` is a __space-separated__ string version of the same thing (without the helpful methods).\n",
+    "\n",
+    "Set-like operations such as `classList.add(token1, ...)`, `classList.remove()`, `classList.contains()`, etc. help to maintain the list dynamically.\n",
+    "\n",
+    "`classList.values()` gives an iterable of string class name values.\n",
+    "\n",
+    "`classList.toggle(className)` to toggle whether a given class is in the list or not (returning `boolean` to say the new state).\n",
+    "\n",
+    "NOTE: `classList` is __iterable__ as well."
    ]
   },
   {
