--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fe842306",
    "metadata": {},
    "outputs": [
@@ -126,11 +126,13 @@
        "  negativeInfinity: -Infinity,\n",
        "  isNotANumber: true,\n",
        "  isPositiveInfinity: false,\n",
-       "  isNegativeInfinity: false\n",
+       "  isNegativeInfinity: false,\n",
+       "  isNaNTruthy: false,\n",
+       "  isInfinityTruthy: true\n",
        "}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,6 +152,10 @@
     "  // Check for Infinity\n",
     "  let isPositiveInfinity: boolean = isFinite(positiveInfinity);\n",
     "  let isNegativeInfinity: boolean = isFinite(negativeInfinity);\n",
+    "    \n",
+    "  // Check truthiness\n",
+    "  let isNaNTruthy: boolean = !!NaN;  // NaN is falsey\n",
+    "  let isInfinityTruthy: boolean = !!Infinity; // Infinity is truthy\n",
     "\n",
     "  return {\n",
     "    notANumber,\n",
@@ -158,6 +164,8 @@
     "    isNotANumber,\n",
     "    isPositiveInfinity,\n",
     "    isNegativeInfinity,\n",
+    "    isNaNTruthy,\n",
+    "    isInfinityTruthy,\n",
     "  };\n",
     "})();\n"
    ]
@@ -809,6 +817,44 @@
     "    value3,\n",
     "  };\n",
     "})();\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f1431b2",
+   "metadata": {},
+   "source": [
+    "# ?? on false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5f709d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    console.log(false ?? 5); // false is not nullish\n",
+    "})();"
    ]
   },
   {
